# scapy-etsi-its

./: CAM_Recording.pcapng  README.md  pyproject.toml  readCamPcap.py  requirements.txt
fields/: Etsi_Its_Msgs.py
